selfhost/test/typechecker/accessor/error_unknown_field_opt_unknown.out
Error at %FILE_NAME%:4:3
Unknown field 'bogus'
  |  f.bogus
       ^
No field 'bogus' found on type Foo?
