selfhost/test/typechecker/accessor/error_unknown_field_opt_unknown.abra
type Foo { str: String }

var f: Foo?
f.bogus